<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context="biz.ys1003.myappportfolio.MainActivity" android:background="#ffdfeaf1">

    <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/textTitle"
            android:text="@string/portfolio_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button android:id="@+id/button1" android:onClick="showMessage" android:layout_centerHorizontal="true" android:layout_below="@id/textTitle" android:text="@string/media_streamer" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <Button android:id="@+id/button2" android:onClick="showMessage" android:layout_centerHorizontal="true" android:layout_below="@id/button1" android:text="@string/super_duo1" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <Button android:id="@+id/button3" android:onClick="showMessage" android:layout_centerHorizontal="true" android:layout_below="@id/button2" android:text="@string/super_duo2" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <Button android:id="@+id/button4" android:onClick="showMessage" android:layout_centerHorizontal="true" android:layout_below="@id/button3" android:text="@string/ant_terminator" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <Button android:id="@+id/button5" android:onClick="showMessage" android:layout_centerHorizontal="true" android:layout_below="@id/button4" android:text="@string/materialize" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <Button android:id="@+id/button6" android:onClick="showMessage" android:layout_centerHorizontal="true" android:layout_below="@id/button5" android:text="@string/capstone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>

</RelativeLayout>
